<resources>
    <string name="app_name">Kareem</string>
    <string name="title_name">Kareem</string>
    <string name="testing_text">HELOO</string>
    <string name="salam">Assalamualaikum 👋</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dzikir">Dzikir</string>
    <string name="tv_dzikir_petang">Dzikir Petang</string>
    <string name="descDzikir">src dzikir pagi petang</string>
    <string name="descGradient">Gradient Background</string>
    <string name="tv_dzikir_pagi">Dzikir Pagi</string>
    <string name="number_surah">1</string>
    <string name="greating_login">Hallo Again</string>
    <string name="explane">Welcome Back you\'ve \nbeen missed</string>
    <string name="registerHere">Not a member?</string>
    <string name="register">Register Now</string>
    <string name="login">Login</string>
    <string name="register_greating">Creat an Account</string>
    <string name="explanereg">lest\'s go become a member</string>
    <string name="regis">Register</string>
    <string name="logout">logout</string>
    <string name="search">search</string>
    <string name="txt_search_hint">Search Ayahs</string>
    <string name="notif">chek Notif</string>
</resources>